--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
         <p> 
             Hello world.
         </p>
+
+
+        <head>
+            hi
+            
+        </head>
     </body>
 </html>
